# ndgrid

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  cbindgen.toml  find_examples.py  katex-header.html  pyproject.toml
.github/scripts/: insert_doc_links.py
.github/workflows/: docs.yml  release.bak  release.yml  run-tests.yml  run-weekly-tests.yml  style-checks.yml
.zed/: settings.json
examples/: connectivity.rs  coupe.rs  io.rs  mixed_grid.rs  null.rs  parallel_grid.rs  parallel_io.rs  serial_grid.rs  single_element_grid.rs  test_parallel_grid.rs  test_parallel_io.rs  test_partitioners.rs
meshes/: cube_quadrilateral.msh  cube_quadrilateral_bin.msh  cube_tetrahedron.msh  cube_tetrahedron_bin.msh  mixed.msh  sphere_triangle.msh  sphere_triangle_bin.msh
python/ndgrid/: __init__.py  grid.py  ownership.py  shapes.py
python/test/: test_geometry_map.py  test_grid.py  test_shapes.py
src/: bindings.rs  geometry.rs  grid.rs  io.rs  lib.rs  shapes.rs  topology.rs  traits.rs  types.rs
src/geometry/: geometry_map.rs  mixed.rs  point.rs  single_element.rs
src/geometry/mixed/: entity_geometry.rs  geometry.rs
src/geometry/single_element/: entity_geometry.rs  geometry.rs
src/grid/: builder.rs  local_grid.rs  parallel.rs  parallel_builder.rs  parallel_grid.rs  serial.rs
src/grid/local_grid/: mixed.rs  single_element.rs
src/grid/local_grid/mixed/: builder.rs  grid.rs
src/grid/local_grid/single_element/: borrowed.rs  builder.rs  grid.rs
src/grid/parallel/: builder.rs  grid.rs  io.rs
src/grid/parallel/io/: ron.rs
src/grid/serial/: single_element.rs  topology.rs  triangle.rs
src/grid/serial/single_element/: borrowed.rs  builder.rs  grid.rs  io.rs  topology.rs
src/grid/serial/single_element/io/: ron.rs
src/grid/serial/topology/: single_cell_type.rs
src/io/: gmsh.rs  ron.rs
src/shapes/: cube.rs  regular_sphere.rs  screen.rs
src/topology/: mixed.rs  serial.rs  single_type.rs
src/topology/serial/: single_type.rs
src/traits/: builder.rs  entity.rs  geometry.rs  geometry_map.rs  grid.rs  io.rs  parallel.rs  parallel_builder.rs  point.rs  topology.rs
src/traits/io/: gmsh.rs  ron.rs
src/types/: connectivity.rs  ownership.rs
tests/: io.rs  test_gmsh_import.rs  test_gmsh_import_binary.rs  test_mesh_ascii_v2.msh  test_mesh_ascii_v4.msh  test_mesh_binary_v2.msh  test_mesh_binary_v4.msh  test_mesh_v1.msh
