[features]
serde = ["dep:serde", "ndelement/serde", "dep:ron"]
strict = []
default = ["serde"]
coupe = ["dep:coupe"]
scotch = ["dep:scotch"]

[package]
name = "ndgrid"
version = "0.1.5-dev"
edition = "2021"
authors = [
    "Timo Betcke <timo.betcke@gmail.com>",
    "Srinath Kailasa <srinathkailasa@gmail.com>",
    "Matthew Scroggs <rust@mscroggs.co.uk>",
]
description = "n-dimensional grid library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/ndgrid"
repository = "https://github.com/bempp/ndgrid"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndgrid"
crate-type = ["lib", "cdylib"]

[dependencies]
coupe = { git = "https://github.com/LIHPC-Computational-Geometry/coupe.git", optional = true }
itertools = "0.14.*"
mpi = { version = "0.8.*" }
ndelement = { git = "https://github.com/bempp/ndelement", features = ["mpi"] }
num = "0.4"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.10", optional = true }
bempp-distributed-tools = { git = "https://github.com/bempp/distributed_tools.git" }
scotch = {version = "0.2.1", optional = true }

[dev-dependencies]
approx = "0.5"
paste = "1.*"

[build-dependencies]
cbindgen = "0.29.0"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"
