[features]
serde = ["dep:serde", "ndelement/serde", "dep:ron"]
strict = []
default = ["serde"]
coupe = ["dep:coupe"]
scotch = ["dep:scotch"]
mpi = ["dep:mpi", "rlst/mpi", "ndelement/mpi"]

[package]
name = "ndgrid"
version = "0.1.5-dev"
edition = "2024"
authors = [
    "Timo Betcke <timo.betcke@gmail.com>",
    "Srinath Kailasa <srinathkailasa@gmail.com>",
    "Matthew Scroggs <rust@mscroggs.co.uk>",
]
description = "n-dimensional grid library."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/ndgrid"
repository = "https://github.com/bempp/ndgrid"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndgrid"
crate-type = ["lib", "cdylib"]

[dependencies]
coupe = { git = "https://github.com/LIHPC-Computational-Geometry/coupe.git", optional = true }
itertools = "0.14.*"
mpi = { git = "https://github.com/rsmpi/rsmpi.git", optional = true }
ndelement = { git = "https://github.com/bempp/ndelement" }
num = "0.4"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.12", optional = true }
scotch = { version = "0.2.1", optional = true }

[patch.crates-io]
scotch = { git = "https://github.com/mscroggs/scotch-rs.git", branch = "mscroggs/runtime", optional = true }

[dev-dependencies]
approx = "0.5"
paste = "1.*"

[build-dependencies]
cbindgen = "0.29.2"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lints.clippy]
wildcard_imports = "forbid"

[[example]]
name = "parallel_grid"
doc-scrape-examples = true
required-features = ["serde", "scotch", "mpi"]

[package.metadata.example.parallel_grid.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "single_element_grid"
doc-scrape-examples = true

[[example]]
name = "io"
doc-scrape-examples = true
required-features = ["serde"]

[[example]]
name = "test_parallel_grid"
required-features = ["mpi"]

[package.metadata.example.test_parallel_grid.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "parallel_io"
required-features = ["serde", "mpi"]

[package.metadata.example.parallel_io.templated-examples]
command = "mpirun -n 4"

[[example]]
name = "test_parallel_io"
required-features = ["serde", "mpi"]

[package.metadata.example.test_parallel_io.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "test_partitioners"
required-features = ["coupe", "scotch", "mpi"]

[package.metadata.example.test_partitioners.templated-examples]
command = "mpirun -n {{NPROCESSES}}"
