[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "ndgrid"
version = "0.1.1"
description = "n-dimensional grid library."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    {name = "Matthew Scroggs", email = "rust@mscroggs.co.uk"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "maturin>=1.7",
    "numpy",
    "cffi",
    'patchelf; platform_system == "Linux"',
    "ndelement"
]
packages = ["ndgrid"]

[project.urls]
homepage = "https://github.com/bempp/ndgrid"
repository = "https://github.com/bempp/ndgrid"

[tool.maturin]
python-source = "python"
module-name = "ndgrid._ndgridrs"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
